Update environment configuration and README for multi-provider LLM support

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,28 @@
-OPENAI_API_KEY=your_api_key_here
-OPENROUTER_API_KEY=your_api_key_here
-GROQ_API_KEY=your_api_key_here
+# Configurações do Modelo de Linguagem
+# Escolha UMA das configurações abaixo de acordo com seu provedor e comente as outras.
+# Certifique-se de salvar este arquivo como .env antes de usar.
+
+# Para OpenAI:
+LLM_API_KEY=sua_chave_api_aqui
+LLM_MODEL_NAME=gpt-4
+LLM_BASE_URL=https://api.openai.com/v1
+
+# Para Together.ai:
+# LLM_API_KEY=sua_chave_together_aqui
+# LLM_MODEL_NAME=meta-llama/Llama-3.3-70B-Instruct-Turbo-Free
+# LLM_BASE_URL=https://api.together.xyz/v1
+
+# Para Groq:
+# LLM_API_KEY=sua_chave_groq_aqui
+# LLM_MODEL_NAME=mixtral-8x7b-32768
+# LLM_BASE_URL=https://api.groq.com/openai/v1
+
+# Para OpenRouter:
+# LLM_API_KEY=sua_chave_openrouter_aqui
+# LLM_MODEL_NAME=openai/gpt-4-turbo
+# LLM_BASE_URL=https://openrouter.ai/api/v1
+
+# Para outros provedores:
+# LLM_API_KEY=sua_chave_api_aqui
+# LLM_MODEL_NAME=nome_do_modelo
+# LLM_BASE_URL=url_base_da_api
